ProcessGetRoleTasksRequest